2009-07-31  Rupert Germann  <rupi@gmx.li>

	* Follow-up for bug #11410: Speed up BEgetRootLine even more by adding a real 2-level cache

2009-07-31  Christian Kuhn  <lollli@schwarzbu.ch>

	* Feature #11581: Small speed improvement in class.t3lib_tstemplate.php (Thanks to Dan Osipov)
	* Fixed bug #11601: Copyright-Notice is hardcoded (Thanks to Christopher Stelmaszyk)

2009-07-30  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed ChangeLog and moved information concerning database updates to NEWS.txt

2009-07-30  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11593: Field t3ver_label is to small for uids >= 100000 (thanks to Fabrizio Branca)
	* Fixed bug #11602: Reset filter above the page-tree is not translatable (Thanks to Christopher Stelmaszyk)

2009-07-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11603: BE-Log: "Changes in fields" and "Show history" are not translatable (Thanks to Christopher Stelmaszyk)

2009-07-27  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated t3lib/core_autoload.php

2009-07-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: System extension feedit misspelled

2009-07-23  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11296: Login-Page: function makeCopyrightNotice() uses hardcoded text (Thanks to Christopher Stelmaszyk)

2009-07-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11566: Missing css for grouping grid collapse/expand (ExtJS)

2009-07-20  Ingo Renner  <ingo@typo3.org>

	* Added feature #11264: Add an opacity option to the GIFBUILDER BOX object

2009-07-20  Oliver Hader  <oliver@typo3.org>

	* Added feature #11509: Move automatic session data garbage collection to separate method

2009-07-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #6875: IRRE - Sorting of child records is inverted on moving parent record to different page (thanks to Nabil Saleh)
	* Fixed bug #11267: Use PHP5 version of function microtime()

2009-07-18  Steffen Kamper  <info@sk-typo3.de>
