@@ -1,3 +1,7 @@
+2009-08-01  Christian Kuhn  <lollli@schwarzbu.ch>
+
+	* Feature #6039: TCA group -> file absolute path without uploadfolder extended (Thanks to Martin Borer)
+
 2009-07-31  Rupert Germann  <rupi@gmx.li>
 
 	* Follow-up for bug #11410: Speed up BEgetRootLine even more by adding a real 2-level cache
